[gd_scene load_steps=5 format=2]

[ext_resource path="res://ArtWork/Sprites/Sprite-0001.png" type="Texture" id=1]
[ext_resource path="res://ArtWork/5x7_practical.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/MainMenu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource( 3 )
target_scene = "res://Scenes/Words/Map.tscn"
opt_target_scene = "res://Scenes/OptionsMenu.tscn"

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0980392, 0.0941176, 0.0941176, 1 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
modulate = Color( 1, 1, 1, 0.345098 )
position = Vector2( 680, 158 )
amount = 133
lifetime = 7.76
preprocess = 40.2
texture = ExtResource( 1 )
direction = Vector2( -32.997, 0 )
spread = 163.63
gravity = Vector2( -20, 0 )
initial_velocity = 32.23
damping = 1.95
angle = -720.0

[node name="PlayButton" type="Button" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 21.0
margin_top = -15.0
margin_right = 75.0
margin_bottom = 7.0
custom_fonts/font = SubResource( 1 )
text = "PLAY"
icon = ExtResource( 1 )
flat = true

[node name="ColorRect" type="ColorRect" parent="PlayButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.0
margin_top = 3.0
margin_bottom = -4.0
mouse_filter = 2
color = Color( 1, 1, 1, 0.101961 )

[node name="OptionsButton" type="Button" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 21.0
margin_top = 4.0
margin_right = 89.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 1 )
text = "OPTIONS"
icon = ExtResource( 1 )
flat = true

[node name="ColorRect" type="ColorRect" parent="OptionsButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.0
margin_top = 3.0
margin_bottom = -4.0
mouse_filter = 2
color = Color( 1, 1, 1, 0.101961 )

[node name="QuitButton" type="Button" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 21.0
margin_top = 23.0
margin_right = 71.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 1 )
text = "QUIT"
icon = ExtResource( 1 )
flat = true

[node name="ColorRect" type="ColorRect" parent="QuitButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.0
margin_top = 3.0
margin_bottom = -4.0
mouse_filter = 2
color = Color( 1, 1, 1, 0.101961 )

[connection signal="button_down" from="PlayButton" to="." method="_on_PlayButton_button_down"]
[connection signal="button_down" from="OptionsButton" to="." method="_on_OptionsButton_button_down"]
[connection signal="button_down" from="QuitButton" to="." method="_on_QuitButton_button_down"]
